--- a/HospitalHubServer/MyHub/templates/base_generic.html
+++ b/HospitalHubServer/MyHub/templates/base_generic.html
@@ -16,7 +16,7 @@
       {% block sidebar %}
         <ul class="sidebar-nav">
           <li><a href="{% url 'index' %}">Home</a></li>
-          <li><a href="">All Hospitals</a></li>
+          <li><a href="{% url 'hospital' %}">All Hospitals</a></li>
           <li><a href="">All Doctors</a></li>
         </ul>
      {% endblock %}
