Login and doctor list and details donegit status

--- a/HospitalHubServer/MyHub/templates/base_generic.html
+++ b/HospitalHubServer/MyHub/templates/base_generic.html
@@ -17,7 +17,7 @@
         <ul class="sidebar-nav">
           <li><a href="{% url 'index' %}">Home</a></li>
           <li><a href="{% url 'hospital' %}">All Hospitals</a></li>
-          <li><a href="">All Doctors</a></li>
+          <li><a href="{% url 'doctor' %}">All Doctors</a></li>
         </ul>
      {% endblock %}
       </div>
