--- a/HospitalHub/myhub/templates/index.html
+++ b/HospitalHub/myhub/templates/index.html
@@ -6,7 +6,7 @@
   <h2>Dynamic content</h2>
   <p>We have the following counts:</p>
   <ul>
-    <li><strong>Hospitals:</strong> {{ num_hospitalss }}</li>
+    <li><strong>Hospitals:</strong> {{ num_hospitals }}</li>
     <li><strong>Doctors:</strong> {{ num_doctors }}</li>
     <!--<li><strong>Copies available:</strong> {{ num_instances_available }}</li>-->
   </ul>
