--- a/HospitalHub/myhub/templates/myhub/hospital_list.html
+++ b/HospitalHub/myhub/templates/myhub/hospital_list.html
@@ -1,7 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1>Hospital List</h1>
+  <h1 style="text-align:left;font-size: 30px;">Hospital List</h1>
   {% if hospital_list %}
   <ul>
     {% for hosp in hospital_list %}
