--- a/HospitalHub/myhub/templates/base_generic.html
+++ b/HospitalHub/myhub/templates/base_generic.html
@@ -2,10 +2,43 @@
 <html lang="en">
 <head>
   <style>
+    .counter {
+    background-color:#f5f5f5;
+    padding: 30px 30px;
+    border-radius: 5px;
+    text-align: center;
+   
+}
+.count-title {
+    font-size: 60px;
+    font-weight:bold;
+    margin-top: 10px;
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.count-text {
+    font-size: 30px;
+    font-weight: normal;
+    margin-top: 10px;
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.fa-2x {
+    margin: 0 auto;
+    font-size: 60px;
+    float: none;
+    display: table;
+    color: #4ad1e5;
+}
     
     .navbar-nav > li{
-  padding-left:30px;
-  padding-right:30px;
+  padding-left:10px;
+  padding-right:10px;
+  padding-top: 4px;
+  
+  font-size: larger;
 }
 .navbar-custom{
   background-color: darkviolet;
@@ -15,6 +48,7 @@
    {% block title %}<title>HospitalHub!</title>{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- Add additional CSS in static file -->
   {% load static %}
@@ -28,8 +62,11 @@
             
           
         
-        <ul class="navbar-nav px-2">
-            <li class="nav-item">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+          <p style="font-size: x-large;color: black;font-weight: bold;">HOSPITALHUB!</p>
+          </li>  
+          <li class="nav-item">
             <a style="color: black;"href="{% url 'index' %}">Home</a>
           </li>
           <li class="nav-item">
@@ -46,8 +83,8 @@
           
            
           {% if user.is_authenticated %}
-          <li class="nav-item"><a href="{% url 'user_review_list' user.username %}">User: {{ user.get_username }}</a></li>
-          <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
+          <li class="nav-item"><a style="color: black;" href="{% url 'user_review_list' user.username %}">User: {{ user.get_username }}</a></li>
+          <li><a style="color: black;"href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
           {% else %}
           <li class="nav-item"><a style="color: black;"href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
           {% endif %}
