--- a/HospitalHub/myhub/static/myhub/style.css
+++ b/HospitalHub/myhub/static/myhub/style.css
@@ -1,5 +1,5 @@
 .counter {
-    background-color:#f5f5f5;
+    background-color:#50e764;
     padding: 30px 30px;
     border-radius: 5px;
     text-align: center;
@@ -26,7 +26,7 @@
     font-size: 60px;
     float: none;
     display: table;
-    color: #4ad1e5;
+    color: #1a0a75;
 }
     
     .navbar-nav > li{
