--- a/HospitalHub/myhub/templates/index.html
+++ b/HospitalHub/myhub/templates/index.html
@@ -1,9 +1,10 @@
 {% extends "base_generic.html" %}
+{% load static %}
 
 {% block content %}
+<img src="{%static 'myhub/images/review.png'%}" style="width: 1860px;height: 750px;" >
 
 
-        
   
                 <!--<h1>HospitalHub Home</h1>-->
                 
@@ -18,7 +19,7 @@
   
 
   <div class="row">
-    <div class="col">
+    <div class="row">
     <div class="counter">
       <i class="fa fa-hospital-o fa-2x" style='font-size:60px;'></i>
 <h1>{{num_hospitals}}</h1>
@@ -27,7 +28,7 @@
     </div>
 
 
-  <div class="col">
+  <div class="row">
   <div class="counter">
 <i class="fa fa-stethoscope fa-2x" style='font-size:60px;'></i>
 <h1>{{num_doctors}}</h1>
