--- a/HospitalHub/myhub/templates/index.html
+++ b/HospitalHub/myhub/templates/index.html
@@ -6,19 +6,13 @@
 
 
   
-   <p style="font-size: 30px;text-align: center;">We have the following counts:</p>
+   <p style="font-size: 50px;text-align: center;">Counts</p>
  
-    
-   
-    
-   
-  
-
   <div class="row">
     <div class="row">
     <div class="counter">
-      <i class="fa fa-hospital-o fa-2x" style='font-size:60px;'></i>
-<h1>{{num_hospitals}}</h1>
+      <i class="fa fa-hospital-o fa-2x" style='font-size:90px;'></i>
+<p><h1 style="font-weight: bolder;">{{num_hospitals}}</h1></p>
  <p class="count-text ">Hospitals</p>
 </div>
     </div>
@@ -26,8 +20,8 @@
 
   <div class="row">
   <div class="counter">
-<i class="fa fa-stethoscope fa-2x" style='font-size:60px;'></i>
-<h1>{{num_doctors}}</h1>
+<i class="fa fa-stethoscope fa-2x" style='font-size:90px;'></i>
+<p><h1 style="font-weight: bolder;">{{num_doctors}}</h1></p>
 <p class="count-text ">Doctors</p>
 </div>
   </div>
