Background color gradation

--- a/HospitalHub/myhub/templates/myhub/doctor_list.html
+++ b/HospitalHub/myhub/templates/myhub/doctor_list.html
@@ -2,6 +2,7 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'myhub/style.css' %}">
 {% block content %}
+<body style="background: linear-gradient(to right,white,blue);">
  <p> <h1>Doctor List</h1></p>
   {% if doctor_list %}
   
@@ -28,5 +29,7 @@
   
   {% else %}
     <p>No doctors presently available.</p>
-  {% endif %}       
+  {% endif %}    
+  
+</body>
 {% endblock %}
