--- a/HospitalHub/myhub/templates/base_generic.html
+++ b/HospitalHub/myhub/templates/base_generic.html
@@ -50,6 +50,8 @@
           {% else %}
           <li class="nav-item"><a style="color: black;"href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
           {% endif %}
+          <li class="nav-item"><a style="color: black;"href="{% url 'register'%}?next={{request.path}}">New? Register now!</a></li>   
+          
         </ul>
      
        
