Search works for both hospitals and doctors.

--- a/HospitalHub/myhub/templates/myhub/doctor_detail.html
+++ b/HospitalHub/myhub/templates/myhub/doctor_detail.html
@@ -12,16 +12,17 @@
 {% endifequal %}
   <p>Education:  {{ doctor.edu.all|join:"; " }}</p>
   <p>Hospital: {{ doctor.hospital.all|join:", "}}</p>
-  <p>{{ doctor.review_set.count }} reviews ({{ doctor.average_rating | floatformat }} average rating)</p>
+  {% if doctor.doctor_review_set.all %}
+
+  <p>{{ doctor.doctor_review_set.count }} reviews ({{ doctor.average_rating | floatformat }} average rating)</p>
  
   
 
   
   <br>
   <br>
-  {% if doctor.review_set.all %}
   <div>
-    {% for review in doctor.review_set.all %}
+    {% for review in doctor.doctor_review_set.all %}
     <div>
         <em>{{ review.comment }}</em>
         <h6>Rated {{ review.rating }} of 5 by {{ review.user_name }}</h6>
@@ -38,7 +39,7 @@
 <h3>Add your review</h3>
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-<form action="{% url 'add_review' doctor.id %}"  method="post">
+<form action="{% url 'doctor_add_review' doctor.id %}"  method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Add" />
