--- a/HospitalHub/myhub/templates/myhub/doctor_list.html
+++ b/HospitalHub/myhub/templates/myhub/doctor_list.html
@@ -7,13 +7,15 @@
   {% if doctor_list %}
   
     
-      <table class="table" style="border: none;">
+      <table class="table" style="border: none; margin-left: auto; margin-right: auto;">
         <tbody>
           {% for doc in doctor_list %}
           
-          <tr style="border: none;">
-       <td style=" border: none; font-size:30px;"> {{ doc.first_name }} {{doc.last_name}} rated {% for star in doc.intaverage_rating %} ⭐ {% endfor %}</td>
-
+          <tr style="border-bottom: 4px solid grey">
+       <td style=" border: none; font-size:30px;"> {{ doc.first_name }} {{doc.last_name}}</td>
+       <td style=" border: none; font-size:20px;"> {% if doc.intaverage_rating %} {% for star in doc.intaverage_rating %} ⭐ {% endfor %} from {% endif %} {{doc.doctor_review_set.all.count}} reviews  </td>
+       <td style=" border: none; font-size:20px;"> {{ doc.edu.all|join:"; " }}</td>
+       <td style=" border: none; font-size:20px;"> {{ doc.hospital.all|join:"; " }}</td>
    <td style="border: none;">    
           <button type="button">
           <a href="{{ doc.get_absolute_url }}">View Details</a>
