--- a/HospitalHub/myhub/templates/registration.html
+++ b/HospitalHub/myhub/templates/registration.html
@@ -10,7 +10,7 @@
 
     </form>
 
-    If you already have an account <a href="/login" target="blank"><strong>login</strong></a> instead.
+    If you already have an account <a href="{% url 'login'%}?next={{request.path}}" target="blank"><strong>login</strong></a> instead.
 
 
 {% endblock %}
