--- a/HospitalHub/templates/registration/login.html
+++ b/HospitalHub/templates/registration/login.html
@@ -86,7 +86,7 @@
         <div class="col-md-6">
             <div class="card">
                 <form class="box" method="post" action="{% url 'login' %}">
-                    {% csrf_token %}
+                    {{% csrf_token %}
                     <h1>Login</h1>
                     <p class="text-muted"> Please enter your login and password!</p> 
                     <p>{{ form.username.label_tag }}</p>
