--- a/HospitalHub/myhub/templates/base_generic.html
+++ b/HospitalHub/myhub/templates/base_generic.html
@@ -3,12 +3,15 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-<head>
+<head>s
    <!-- Add additional CSS in static file -->
 
   <link rel="stylesheet" href="{% static 'myhub/style.css' %}">
 
    {% block title %}<title>HospitalHub!</title>{% endblock %}
+
+ 
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
