--- a/HospitalHub/templates/registration/login.html
+++ b/HospitalHub/templates/registration/login.html
@@ -41,7 +41,7 @@
 }
 
 .box input[type="text"]:focus,
-.box input[type="password"] :focus{
+.box input[type="password"]:focus{
     width: 300px;
     border-color: #2ecc71
 }
@@ -89,9 +89,9 @@
                     {{% csrf_token %}
                     <h1>Login</h1>
                     <p class="text-muted"> Please enter your login and password!</p> 
-                    <p>{{ form.username.label_tag }}</p>
+                    <p style="color: white;">{{ form.username.label_tag }}</p>
                     <p>{{ form.username }}</p>
-                    <p>{{ form.password.label_tag }}</p>
+                    <p style="color: white;">{{ form.password.label_tag }}</p>
                     <p>{{ form.password }}</p>
                     <input type="submit" value="login" >
                     <input type="hidden" name="next" value="{{ next }}" >
