--- a/HospitalHub/myhub/templates/registration.html
+++ b/HospitalHub/myhub/templates/registration.html
@@ -73,7 +73,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card">
-                    <form class="box" method="post" action="{% url 'login' %}">
+                    <form class="box" method="post" action="{% url 'register' %}">
                         {{% csrf_token %}
                         <h1>Register</h1>
                         <p style="color: white;">{{ form.username.label_tag }}</p>
