Enlist page styling done

--- a/HospitalHub/myhub/templates/base_generic.html
+++ b/HospitalHub/myhub/templates/base_generic.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-<head>s
+<head>
    <!-- Add additional CSS in static file -->
 
   <link rel="stylesheet" href="{% static 'myhub/style.css' %}">
