grey line in hospital list added

--- a/HospitalHub/myhub/templates/myhub/hospital_list.html
+++ b/HospitalHub/myhub/templates/myhub/hospital_list.html
@@ -11,7 +11,7 @@
       <tbody>
         {% for hosp in hospital_list %}
         
-        <tr style="border: none;">
+        <tr style="border-bottom: 4px solid grey">
      <td style="border: none;font-size:30px;"> {{ hosp.name }}</td>
 
  <td style="border: none;">    
