Fixes bugs in hospital and doctor reviews.

--- a/HospitalHub/myhub/templates/myhub/review_list.html
+++ b/HospitalHub/myhub/templates/myhub/review_list.html
@@ -16,6 +16,21 @@
     {% endfor %}
 </div>
 {% else %}
-<p>No reviews are available.</p>
+<p>No doctor reviews are available.</p>
+{% endif %}
+{% if hospital_review_list %}
+<div>
+    {% for review in hospital_review_list %}
+    <div>
+        <h4><a href="{{ review.hospital.get_absolute_url }}">
+        {{ review.hospital.first_name }}
+        </a></h4>
+        <h6>rated {{ review.rating }} of 5 by {{ review.user_name }}</h6>
+        <p>{{ review.comment }}</p>
+    </div>
+    {% endfor %}
+</div>
+{% else %}
+<p>No hospital reviews are available.</p>
 {% endif %}
 {% endblock %}
