Optimizes many things. Adds forms.css

--- a/HospitalHub/myhub/templates/index.html
+++ b/HospitalHub/myhub/templates/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<img src="{%static 'myhub/images/review.png'%}" style="width: 1860px;height: 750px;" >
+<img src="{%static 'images/review.png'%}" style="width: 1860px;height: 750px;" >
 
 
   
