--- a/HospitalHub/myhub/templates/base_generic.html
+++ b/HospitalHub/myhub/templates/base_generic.html
@@ -6,7 +6,7 @@
 <head>
    <!-- Add additional CSS in static file -->
 
-  <link rel="stylesheet" href="{% static 'myhub/style.css' %}">
+  <link rel="stylesheet" href="{% static 'style.css' %}">
 
    {% block title %}<title>HospitalHub!</title>{% endblock %}
 
