--- a/HospitalHub/myhub/templates/enlistdoctor.html
+++ b/HospitalHub/myhub/templates/enlistdoctor.html
@@ -4,84 +4,24 @@
 {%block content%}
 
 <head>
-    <style>
-      .box {
-      width: 500px;
-      padding: 40px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      background: #191919;
-      text-align: center;
-      transition: 0.25s;
-      margin-top: 100px;
-  
-    }
-  
-    .box input[type="text"],
-  .box input[type="password"] {
-      border: 0;
-      background: none;
-      display: block;
-      margin: 20px auto;
-      text-align: center;
-      border: 2px solid #3498db;
-      padding: 10px 10px;
-      width: 250px;
-      outline: none;
-      color: white;
-      border-radius: 24px;
-      transition: 0.25s
-  }
-  
-  .box h1 {
-      color: white;
-      text-transform: uppercase;
-      font-weight: 500
-  }
-  
-  .box input[type="text"]:focus,
-  .box input[type="password"]:focus{
-      width: 300px;
-      border-color: #2ecc71
-  }
-  
-  .box input[type="submit"] {
-      border: 0;
-      background: none;
-      display: block;
-      margin: 20px auto;
-      text-align: center;
-      border: 2px solid #2ecc71;
-      padding: 14px 40px;
-      outline: none;
-      color: white;
-      border-radius: 24px;
-      transition: 0.25s;
-      cursor: pointer
-  }
-  
-  .box input[type="submit"]:hover {
-      background: #2ecc71
-  }
-  
-  </style>
+    <link rel="stylesheet" href="{% static 'forms.css' %}">
+
   </head>
-<body style="background: linear-gradient(to right, #b92b27, #1565c0);">
+<body>
     
 
     <div class="container">
         <div class="row">
             <div class="col-md-6">
                 <div class="card">
-                    <form class="box" method="post" action="{% url 'register' %}">
+                    <form class="box" method="post" action="{% url 'enlistdoctor' %}">
                         {% csrf_token %}
                        <p> <h1>Enlist Doctor</h1></p>
                         {%for fields in form%}
                         <p style="color: white;">{{fields.label_tag}}</p>
                         <p>{{fields}}</p>
                         {%endfor%}
-                        <button style="background-color:#F4EB16; color:blue" class="btn btn-outline-info" type="submit">Sign Up</button>
+                        <button class="btn btn-outline-info" type="submit">Sign Up</button>
 
                    
                 
