--- a/HospitalHub/myhub/templates/myhub/search_list.html
+++ b/HospitalHub/myhub/templates/myhub/search_list.html
@@ -4,17 +4,19 @@
 <link rel="stylesheet" href="{% static 'myhub/style.css' %}">
 {% block content %}
 <body style="background: linear-gradient(to right,white,blue);">
- <p> <h1>Doctor List</h1></p>
+  <p> <h1>Doctor List</h1></p>
   {% if doctor_list %}
   
     
-      <table class="table" style="border: none;">
+      <table class="table" style="border: none; margin-left: auto; margin-right: auto;">
         <tbody>
           {% for doc in doctor_list %}
           
-          <tr style="border: none;">
+          <tr style="border-bottom: 4px solid grey">
        <td style=" border: none; font-size:30px;"> {{ doc.first_name }} {{doc.last_name}}</td>
-
+       <td style=" border: none; font-size:20px;"> {% if doc.intaverage_rating %} {% for star in doc.intaverage_rating %} ⭐ {% endfor %} from {% endif %} {{doc.doctor_review_set.all.count}} reviews  </td>
+       <td style=" border: none; font-size:20px;"> {{ doc.edu.all|join:"; " }}</td>
+       <td style=" border: none; font-size:20px;"> {{ doc.hospital.all|join:"; " }}</td>
    <td style="border: none;">    
           <button type="button">
           <a href="{{ doc.get_absolute_url }}">View Details</a>
@@ -40,23 +42,24 @@
     <table class="table" style="border: none;">
       <tbody>
         {% for hosp in hospital_list %}
-        
-        <tr style="border: none;">
-     <td style="border: none;font-size:30px;"> {{ hosp.name }}</td>
-
- <td style="border: none;">    
-        <button type="button">
-        <a href="{{ hosp.get_absolute_url }}">View Details</a>
-      </button>
-      </td>
-  </tr>
-   
-    {% endfor %}
+          
+          <tr style="border-bottom: 4px solid grey">
+       <td style=" border: none; font-size:30px;"> {{ hosp.name }}</td>
+       <td style=" border: none; font-size:20px;"> {% if hosp.intaverage_rating %} {% for star in hosp.intaverage_rating %} ⭐ {% endfor %} from {% endif %} {{hosp.hospital_review_set.all.count}} reviews  </td>
+       <td style=" border: none; font-size:20px;"> {{ hosp.city }}</td>
+   <td style="border: none;">    
+          <button type="button">
+          <a href="{{ hosp.get_absolute_url }}">View Details</a>
+        </button>
+        </td>
+    </tr>
+     
+      {% endfor %}
     </tbody>
     </table>
   
   {% else %}
     <p>No hospitals presently listed.</p>
-  {% endif %}
+  {% endif %}   
 </body>
 {% endblock %}
