--- a/HospitalHub/myhub/templates/myhub/doctor_detail.html
+++ b/HospitalHub/myhub/templates/myhub/doctor_detail.html
@@ -11,13 +11,17 @@
   box-shadow: 0 4px 8px 0 rgba(181, 224, 61, 0.2);
   max-width: 600px;
   margin: auto;
+  background:inherit;
   text-align: center;
   font-family: arial; 
-  background:url(/HospitalHub/doctorbackground.jpg);
-  background-size: cover;
+}
+.wrapper {
+  position: relative;
+  width: 280px;
+  height: 350px;
+ 
   overflow: hidden;
 }
-	
  
 .title {
   color: grey;
