--- a/HospitalHub/myhub/templates/base_generic.html
+++ b/HospitalHub/myhub/templates/base_generic.html
@@ -64,7 +64,7 @@
 
       
 
-      <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
+      <div class="container-fluid main_container">{% block content %}{% endblock %}</div>
    
 
 </body>
