Background color change

--- a/HospitalHub/myhub/static/forms.css
+++ b/HospitalHub/myhub/static/forms.css
@@ -1,6 +1,6 @@
 body
 {
-    background: linear-gradient(to right, #b92b27, #1565c0);
+    background: linear-gradient(to right,white,blue);
 }
       .box {
       width: 500px;
