--- a/HospitalHub/myhub/templates/enlisthospital.html
+++ b/HospitalHub/myhub/templates/enlisthospital.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static 'forms.css' %}">
 
 </head>
-<body style="background: linear-gradient(to right, #b92b27, #1565c0);">
+<body>
     
 
     <div class="container">
