--- a/HospitalHub/myhub/templates/myhub/doctor_detail.html
+++ b/HospitalHub/myhub/templates/myhub/doctor_detail.html
@@ -60,7 +60,7 @@ button:hover, a:hover {
 
  
 
-<body  style="background: linear-gradient(to right, #b92b27, #1565c0);">
+<body  style="background: linear-gradient(to right,white,blue);">
 
 <h2 style="text-align:center ;color: white;" >Doctor Profile Card</h2>
 <div class="card">
