--- a/HospitalHub/myhub/templates/myhub/hospital_detail.html
+++ b/HospitalHub/myhub/templates/myhub/hospital_detail.html
@@ -49,7 +49,7 @@ button:hover, a:hover {
 }
 </style>
 </head>
-<body  style="background: linear-gradient(to right, #b92b27, #1565c0);">
+<body  style="background: linear-gradient(to right,white,blue);">
 <h2 style="text-align:center ;color: white;">Hospital Details Card</h2>
 <div class="card">
   <div class="card-header heading-footer">
