--- a/HospitalHub/myhub/templates/enlistdegree.html
+++ b/HospitalHub/myhub/templates/enlistdegree.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static 'forms.css' %}">
 
   </head>
-<body style="background: linear-gradient(to right, #b92b27, #1565c0);">
+<body style="background: linear-gradient(to right,white,blue);">
     
 
     <div class="container">
