--- a/HospitalHub/templates/registration/login.html
+++ b/HospitalHub/templates/registration/login.html
@@ -1,73 +1,14 @@
 
 
 {% extends "base_generic.html" %}
-
+{% load static %}
 {% block content %}
 <head>
-  <style>
-    .box {
-    width: 500px;
-    padding: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    background: #191919;
-    text-align: center;
-    transition: 0.25s;
-    margin-top: 100px;
+  <link rel="stylesheet" href="{% static 'forms.css' %}">
 
-  }
 
-  .box input[type="text"],
-.box input[type="password"] {
-    border: 0;
-    background: none;
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid #3498db;
-    padding: 10px 10px;
-    width: 250px;
-    outline: none;
-    color: white;
-    border-radius: 24px;
-    transition: 0.25s
-}
-
-.box h1 {
-    color: white;
-    text-transform: uppercase;
-    font-weight: 500
-}
-
-.box input[type="text"]:focus,
-.box input[type="password"]:focus{
-    width: 300px;
-    border-color: #2ecc71
-}
-
-.box input[type="submit"] {
-    border: 0;
-    background: none;
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid #2ecc71;
-    padding: 14px 40px;
-    outline: none;
-    color: white;
-    border-radius: 24px;
-    transition: 0.25s;
-    cursor: pointer
-}
-
-.box input[type="submit"]:hover {
-    background: #2ecc71
-}
-
-</style>
 </head>
-<body style="background: linear-gradient(to right, #b92b27, #1565c0);">
+<body>
   {% if form.errors %}
     <p>Your username and password didn't match. Please try again.</p>
   {% endif %}
