--- a/HospitalHub/myhub/templates/myhub/doctor_detail.html
+++ b/HospitalHub/myhub/templates/myhub/doctor_detail.html
@@ -6,22 +6,19 @@
 
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <style>
 .card {
   box-shadow: 0 4px 8px 0 rgba(181, 224, 61, 0.2);
   max-width: 600px;
   margin: auto;
-  background:black;
   text-align: center;
   font-family: arial; 
-}
-.wrapper {
-  position: relative;
-  width: 280px;
-  height: 350px;
- 
+  background :black;
+  background-size: cover;
   overflow: hidden;
 }
+	
  
 .title {
   color: grey;
