--- a/HospitalHub/myhub/templates/index.html
+++ b/HospitalHub/myhub/templates/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="{% static 'myhub/style.css' %}">
 {% block content %}
 <!--<img src="{%static 'images/review.png'%}" style="width: 1860px;height: 750px;" >-->
-<body style="background-image: url({%static 'images/doctor.jpg'%});"
+<body style="background-image: url({%static 'images/doctor.jpg'%}); background-size:100% auto"
 
 <div class="background">
   
