Some more fonts.

--- a/HospitalHub/myhub/static/style.css
+++ b/HospitalHub/myhub/static/style.css
@@ -46,5 +46,13 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+.searchfield {
+      text-align: center;
+}
+
+.main_container{
+font-family: 'Rubik', sans-serif;
+   
+}
 
 
