--- a/HospitalHub/myhub/static/forms.css
+++ b/HospitalHub/myhub/static/forms.css
@@ -12,11 +12,10 @@ body
       text-align: center;
       transition: 0.25s;
       margin-top: 100px;
-  
+      font-family: 'Rubik', sans-serif;
     }
   
-    .box input[type="text"],
-  .box input[type="password"] {
+    .box input[type="text"], .box input[type="password"] {
       border: 0;
       background: none;
       display: block;
@@ -34,7 +33,8 @@ body
   .box h1 {
       color: white;
       text-transform: uppercase;
-      font-weight: 500
+      font-family: 'Rubik', sans-serif;
+
   }
   
   .box input[type="text"]:focus,
