--- a/HospitalHub/myhub/templates/myhub/hospital_detail.html
+++ b/HospitalHub/myhub/templates/myhub/hospital_detail.html
@@ -13,7 +13,7 @@
   max-width: 600px;
   margin: auto;
   text-align: center;
-  font-family: arial; 
+  font-family: 'Rubik', Arial;
   background :black;
   background-size: cover;
   overflow: hidden;
@@ -48,9 +48,14 @@ button:hover, a:hover {
   opacity: 0.7;
 }
 </style>
+<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </head>
 <body  style="background: linear-gradient(to right,white,blue);">
-<h2 style="text-align:center ;color: white;">Hospital Details Card</h2>
 <div class="card">
   <div class="card-header heading-footer">
 
@@ -100,7 +105,7 @@ button:hover, a:hover {
   </form>
   {% if hospital.hospital_review_set.all %}
 
-  <p style="color: white;">{{ hospital.hospital_review_set.count }} reviews ({{ hospital.average_rating | floatformat }} average rating)</p>
+  <p style="color: white;">{% if hospital.intaverage_rating %} {% for star in hospital.intaverage_rating %} ⭐ {% endfor %} ({{hospital.hospital_review_set.all.count}} reviews){% endif %}</p>
  
   
 
@@ -110,8 +115,9 @@ button:hover, a:hover {
   <div > 
     {% for review in hospital.hospital_review_set.all %}
     <div>
-        <em style="color: white;">{{ review.comment }}</em>
-        <h6 style="color: white;"> Rated {{ review.rating }} of 5 by {{ review.user_name }}</h6>
+        <h6 style="color: white;">{{ review.user_name }}</h6>
+        <h6>{% for star in review.get_rating %} ⭐ {% endfor %}</h6>
+        <h6 style="color: white;">{{ review.comment }}</em>
         <h5 style="color: white;"><a href="{{ review.get_absolute_url }}">
         Read more
         </a></h5>
