:thodi ghan kadli

--- a/HospitalHub/myhub/templates/index.html
+++ b/HospitalHub/myhub/templates/index.html
@@ -3,9 +3,9 @@
 <link rel="stylesheet" href="{% static 'myhub/style.css' %}">
 {% block content %}
 <!--<img src="{%static 'images/review.png'%}" style="width: 1860px;height: 750px;" >-->
-<body style="background-image: url({%static 'images/doctor.jpg'%});"
+<body style="background-image: url({%static 'images/doctor.jpg'%});background-size:100% auto;">
 
-<div class="background">
+<div class="background"> 
   
    <p style="font-size: 50px;text-align: center;">Counts</p>
  
@@ -28,4 +28,5 @@
   </div>
   </div>
 </div>
+</body>
 {% endblock %}
