--- a/HospitalHub/myhub/templates/myhub/doctor_detail.html
+++ b/HospitalHub/myhub/templates/myhub/doctor_detail.html
@@ -12,16 +12,11 @@
   max-width: 600px;
   margin: auto;
   background:black;
+  
   text-align: center;
   font-family: arial; 
 }
-.wrapper {
-  position: relative;
-  width: 280px;
-  height: 350px;
- 
-  overflow: hidden;
-}
+
  
 .title {
   color: grey;
@@ -47,15 +42,13 @@ a {
   color: white;
 }
 
-button:hover, a:hover {
-  opacity: 0.7;
-}
+
 </style>
 <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  
+ 
 </head>
 
  
@@ -64,7 +57,7 @@ button:hover, a:hover {
 
 <h2 style="text-align:center ;color: white;" >Doctor Profile Card</h2>
 <div class="card">
-<div class="card-header heading-footer"></div>
+<div class="card-header heading-footer">
 <div class="row">
 <div class="col">
 
@@ -88,7 +81,7 @@ button:hover, a:hover {
 <form action="{% url 'doctor_add_review' doctor.id %}"  method="post" style="color: white;">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Add" />
+    <input type="submit" value="Add"  style="color:black"/>
 </form>
 
 
@@ -115,6 +108,7 @@ button:hover, a:hover {
 <p style="color: white;">No reviews for this doctor yet</p>
 {% endif %}
 
+</div>
 </div>
 </div>
 {% endblock %}
